--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Bits and Pizzas</string>
     <string name="action_settings">Settings</string>
     <string name="action_create_order">Create Order</string>
+    <string name="create_order">Create Order</string>
+    <string name="action_share">Share</string>
 </resources>
